bring back module aliases with "@" instead of "$"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
@@ -12,7 +11,11 @@
 		"strict": true,
 		"paths": {
 			"$msw": ["./src/msw"],
-			"$msw/*": ["./src/msw/*"]
+			"$msw/*": ["./src/msw/*"],
+			"@lib": ["./src/lib"],
+			"@lib/*": ["./src/lib/*"],
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"]
 		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
