--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
 			"@lib": ["./src/lib"],
 			"@lib/*": ["./src/lib/*"],
 			"$lib": ["./src/lib"],
-			"$lib/*": ["./src/lib/*"]
+			"$lib/*": ["./src/lib/*"],
+			"#firebase": ["./src/firebase"],
+			"#firebase/*": ["./src/firebase/*"]
 		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
