Setup svelte & project: - vitest w/ coverage and testing-library - msw (client & server) - firebase connection - TS aliases - css reset

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
+		"ignoreDeprecations": "5.0",
 		"allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
@@ -8,7 +9,17 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"paths": {
+			"$msw": ["./src/msw"],
+			"$msw/*": ["./src/msw/*"],
+			"@lib": ["./src/lib"],
+			"@lib/*": ["./src/lib/*"],
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"],
+			"#firebase": ["./src/firebase"],
+			"#firebase/*": ["./src/firebase/*"]
+		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
