--- a/package.json
+++ b/package.json
@@ -4,30 +4,46 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
+		"dev:msw-server": "concurrently \"cd msw && ts-node server.ts\" \"npm run dev\"",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
+		"test": "vitest",
+		"coverage": "vitest run --coverage",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^3.2.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vitest/coverage-istanbul": "^0.28.3",
+		"concurrently": "^7.6.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"jsdom": "^21.1.0",
+		"msw": "^1.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
+		"vite-tsconfig-paths": "^4.0.5",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"msw": {
+		"workerDirectory": "static"
+	},
+	"dependencies": {
+		"firebase": "^9.16.0"
+	}
 }
